--- a/bank-account/account-query/pom.xml
+++ b/bank-account/account-query/pom.xml
@@ -29,6 +29,16 @@
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.osiris</groupId>
+			<artifactId>messaging</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.osiris</groupId>
+			<artifactId>account-common</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
